[tool.poetry]
name = "2-1-models"
version = "0.1.0"
description = ""
authors = ["Jorique <guselnikovgeorgiy@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
faker = "^33.1.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
